2001-10-14  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_proc.c:
	* dae/oprofiled.c:
	* op_user.h:
	* oprofile.h:
	* op_syscalls.c: use string pool. Prime hash table
	  with common entries. Consider parent in name_hash.
 
2001-10-13  Philippe Elie  <ph_e@club-internet.fr>

	* doc/oprofile.sgml: minor change
	* pp/opf_filter.cpp: better warning

2001-10-13  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: 0.0.6 has been released -> 0.0.7cvs
 
2001-10-12  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* doc/oprofile.sgml: new docs for annotation filter
 
2001-10-12  John Levon  <moz@compsoc.man.ac.uk>

	* pp/opf_filter.cpp: make output filters more like diff (needs doc),
	  briefer info message
 
2001-10-12  John Levon  <moz@compsoc.man.ac.uk>

	* doc/Makefile.in: add FIXME

	* gui/oprof_start.cpp: fix std::

	* acinclude.m4: more fixes
 
2001-10-12  Philippe Elie  <ph_e@club-internet.fr>

	* gui/oprof_start_util.cpp: use select() rather non-blocking
	  mode to read output from the child process

2001-10-11  Philippe Elie  <ph_e@club-internet.fr>

	* doc/oprofile.sgml:
	* doc/oprofile.1.in:
	* pp/opf_filter: make --output and --no-output more intuitive

2001-10-09  Philippe Elie  <ph_e@club-internet.fr>

	* doc/oprofile.sgml:
	* doc/oprofile.1.in: clarify doc
	* pp/opf_filter.cpp: corner case fix in --output-dir and
	  --source-dir handling.

2001-10-08  John Levon  <moz@compsoc.man.ac.uk>

	* acinclude.m4:
	* configure.in:
	* gui/Makefile.in: fix idiot config bug of mine
 
2001-10-06  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_filter.cpp:
	* pp/op_to_source: small cleanup

2001-10-05  Philippe Elie  <ph_e@club-internet.fr>

	* doc/oprofile.1.in:
	* doc/oprofile.sgml:
	* pp/op_to_source:
	* pp/opf_filter.cpp: implement --output and --no-output to
 	  allow output file generation filtering

2001-10-04  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update
 
2001-10-03  Philippe Elie  <ph_e@club-internet.fr>

	* doc/oprofile.1.in: